# tunshell_mcp_agents

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  glama.json  package-lock.json  package.json  server.json  smithery.yaml
.github/workflows/: ci.yml  release.yml
crates/mcp-server/: Cargo.toml
crates/mcp-server/examples/: live_roundtrip.rs  sync_probe.rs
crates/mcp-server/fuzz/: Cargo.toml  README.md
crates/mcp-server/fuzz/fuzz_targets/: cron_validate.rs  crypto_decrypt.rs  envelope_decrypt.rs  fragment_reassemble.rs  protocol_client.rs  protocol_server.rs  safety_command.rs  safety_path.rs
crates/mcp-server/src/: autonomous.rs  config.rs  connection.rs  daemon.rs  exclude.rs  files.rs  install_mcp.rs  lib.rs  main.rs  mapreduce.rs  mcp_server.rs  relay_api.rs  relay_controller.rs  relay_udp.rs  safety.rs  scheduler.rs  sessions.rs  state.rs  sync.rs  transfer.rs  tunnel.rs  udp_transport.rs
crates/mcp-server/src/executor/: filesystem.rs  git.rs  mod.rs  shell.rs
crates/mcp-server/tests/: transfer_e2e.rs  udp_interop.rs
crates/relay/: Cargo.toml  README.md
crates/relay/fuzz/: Cargo.toml
crates/relay/fuzz/fuzz_targets/: routing.rs
crates/relay/src/: handler.rs  lib.rs  main.rs  routing.rs  state.rs
crates/relay/tests/: relay.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/src/: compress.rs  crypto.rs  lib.rs  proto_convert.rs  protocol.rs  quic.rs  types.rs  udp.rs  udp_channel.rs
guides/: vue-nodejs-nginx-fleet-guide.ru.md
npm/: LICENSE  README.md  install.js  install.test.js  package.json  run.js  run.test.js
proto/: remote_agents.proto
publishing/: cline-marketplace-issue.md  docker-mcp-registry-server.yaml
worker/: buf.gen.yaml  e2e.mjs  package.json  wrangler.jsonc
worker/src/: index-simple.ts  index.ts  room.test.ts  room.ts  types.ts  wire.ts
