[package]
name = "remote-agents-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Optional end-to-end encryption (AES-GCM-256)
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

# UDP P2P transport (optional feature)
tokio = { workspace = true, optional = true }
ruzstd = "0.8.3"
if-addrs = "0.15"

[features]
default = []
udp = ["tokio"]
